--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="tools-wrapper">
                     <h5>Color:</h5>
-                    <div class="slider">
+                    <div class="pen">
                         <input type="color" id="color-input" />
                         <i class="fa-solid fa-pen" style="color: #ffffff;"></i>
                     </div>
